# chat_backend

./: Cargo.toml
migrations/: 20240903193623_user.sql  20240915135639_chat.sql  20240917154513_chat_fix.sql  20240921150937_not-null-foreign-keys.sql
src/: auth.rs  chat.rs  jwt.rs  lib.rs  main.rs  middlewares.rs  sockets.rs  user.rs
src/auth/: authentication.rs  jwt.rs  registration.rs
src/chat/: chat.rs
src/sockets/: member.rs  message.rs
src/user/: user.rs
