[package]
name = "chat_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
bcrypt = "0.15.1"
dotenv = "0.15.0"
jwt-simple = "0.12.10"
serde = { version = "1.0.209", features = ["derive", "alloc", "rc", "serde_derive"] }
socketioxide = { version = "0.14.1", features = ["state"] }
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
uuid = { version = "1.10.0", features = ["serde"] }
